--- a/android/docker-stack.yml
+++ b/android/docker-stack.yml
@@ -17,11 +17,10 @@ services:
       --privileged=true
       --net=host
       --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
-      -v /dev:/dev:shared
       -v /var/log:/var/log 
       -v /var/run/:/var/run/ 
       -v /usr/bin/docker:/usr/bin/docker
-      registry.edge.io/lab/x11:1.1.0'
+      registry.rsdecsapps.net/demo/x11:1.1.2'
     volumes:
       - /var/run:/var/run
     deploy:
@@ -53,9 +52,8 @@ services:
       --env RAM=4096 
       --env ADD_FLAGS="-device vfio-pci,sysfsdev=/sys/devices/pci0000:00/0000:00:02.0/$${UUID},x-igd-opregion=on,display=on"
       --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
-      -v /dev:/dev:shared
       -v /var/run/:/var/run/ 
-      registry.edge.io/lab/android:0.1.1'
+      registry.rsdecsapps.net/demo/android:0.1.1'
     volumes:
       - /var/run:/var/run
     deploy:
