--- a/x11video/docker-stack.yml
+++ b/x11video/docker-stack.yml
@@ -28,6 +28,6 @@ services:
       placement:
         constraints: 
           - node.platform.os == linux
-          - engine.labels.graphics.i915 == true
+          # - engine.labels.graphics.i915 == true
           # - engine.labels.serial_number == 1905122097
           # - node.labels.gpu.available == true
