--- a/age-gender-recognition/docker-stack.yml
+++ b/age-gender-recognition/docker-stack.yml
@@ -37,7 +37,7 @@ services:
       --rm 
       -v /var/log:/var/log 
       -v /var/run/:/var/run/ 
-      -v /usr/bin/docker:/usr/bin/docker
+      -v /usr/local/bin/docker:/usr/bin/docker
       ullaakut/rtspatt:1.3.2'
     volumes:
       - /var/run:/var/run
@@ -64,7 +64,7 @@ services:
       --rm
       -v /var/log:/var/log 
       -v /var/run/:/var/run/ 
-      -v /usr/bin/docker:/usr/bin/docker
+      -v /usr/local/bin/docker:/usr/bin/docker
       registry.ori.adsdcsp.com/edge/age-gender:demo -d_fr GPU -d_ag GPU -n_ag 30 s_fd 50 -servicename service1 -rabbithost rabbit-host:5672 -streampath rtsp://usb-rtsp:8554/live.sdp -datapath /data/facedb -serialnumber 1'
     volumes:
       - /var/run:/var/run
@@ -104,7 +104,7 @@ services:
       --rm
       -v /var/log:/var/log 
       -v /var/run/:/var/run/ 
-      -v /usr/bin/docker:/usr/bin/docker
+      -v /usr/local/bin/docker:/usr/bin/docker
       registry.ori.adsdcsp.com/edge/cv-orchestrator:demo'
     volumes:
       - /var/run:/var/run
