--- a/dos/docker-stack.yml
+++ b/dos/docker-stack.yml
@@ -16,10 +16,12 @@ services:
       --env AUTOSTART="dos=remote-viewer -f spice+unix://var/run/dos.sock"
       --privileged=true
       --net=host
+      --dns=8.8.8.8 
+      --dns=8.8.4.4 
       --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
       -v /var/log:/var/log 
       -v /var/run/:/var/run/ 
-      -v /usr/bin/docker:/usr/bin/docker
+      -v /usr/local/bin/docker:/usr/bin/docker
       registry.rsdecsapps.net/demo/x11:1.1.0'
     volumes:
       - /var/run:/var/run
@@ -30,7 +32,7 @@ services:
         constraints: 
           - node.platform.os == linux
           - engine.labels.graphics.i915 == true
-          # - engine.labels.serial_number == 1905122097
+          # - engine.labels.serial_number == 8CC83219S9
           # - node.labels.gpu.available == true
 
   dos:
@@ -42,7 +44,9 @@ services:
       'exec docker run 
       --interactive
       --name=dos 
-      --net=host 
+      --net=host
+      --dns=8.8.8.8 
+      --dns=8.8.4.4  
       --privileged=true 
       --rm
       -v /var/run/:/var/run/
@@ -58,4 +62,4 @@ services:
           - node.platform.os == linux
           - engine.labels.graphics.i915 == true
           - engine.labels.vt_enabled == true
-          # - engine.labels.serial_number == 1905122097
+          # - engine.labels.serial_number == 8CC83219S9
