--- a/priority/docker-compose.yml
+++ b/priority/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       --env SPICE=tcp
       --env ADD_FLAGS='-device vfio-pci,sysfsdev=/sys/devices/pci0000:00/0000:00:02.0/82c4d219-0c64-47e1-8b22-3c9bb1422cae,x-igd-opregion=on -usb -device usb-tablet'
       --label com.docker.stack.namespace=$$(docker container inspect --format '{{index .Config.Labels \"com.docker.stack.namespace\"}}' $${TASK_NAME})
-      -v /var/run/:/var/run/ 
+      -v /run:/run 
       registry.ori.adsdcsp.com/demo/winsrv2012:0.0.3"
     volumes:
       - /var/run:/var/run
@@ -69,7 +69,7 @@ services:
   #     -v /dev:/dev
   #     -v /sys:/sys
   #     -v /proc:/proc
-  #     -v /var/run/:/var/run/
+  #     -v /run:/run
   #     -v /mnt/opt/appflows/:/appflows/
   #     -e "CONFIG_FILEPATHS=/appflows"
   #     -e "WATCHED_PATHS=/appflows,/home"
@@ -153,7 +153,7 @@ services:
   #     --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
   #     -v /dev:/dev:shared
   #     -v /var/log:/var/log 
-  #     -v /var/run/:/var/run/ 
+  #     -v /run:/run 
   #     -v /usr/local/bin/docker:/usr/bin/docker
   #     registry.edge.io/lab/x11:1.1.0'
   #   volumes:
