--- a/age-gender-recognition/docker-stack.yml
+++ b/age-gender-recognition/docker-stack.yml
@@ -36,7 +36,7 @@ services:
       --device "/dev/video0"
       --rm 
       -v /var/log:/var/log 
-      -v /var/run/:/var/run/ 
+      -v /run:/run 
       -v /usr/local/bin/docker:/usr/bin/docker
       ullaakut/rtspatt:1.3.2'
     volumes:
@@ -63,7 +63,7 @@ services:
       -v face:/data
       --rm
       -v /var/log:/var/log 
-      -v /var/run/:/var/run/ 
+      -v /run:/run 
       -v /usr/local/bin/docker:/usr/bin/docker
       registry.ori.adsdcsp.com/edge/age-gender:demo -d_fr GPU -d_ag GPU -n_ag 30 s_fd 50 -servicename service1 -rabbithost rabbit-host:5672 -streampath rtsp://usb-rtsp:8554/live.sdp -datapath /data/facedb -serialnumber 1'
     volumes:
@@ -103,7 +103,7 @@ services:
       --network=rrp-net
       --rm
       -v /var/log:/var/log 
-      -v /var/run/:/var/run/ 
+      -v /run:/run 
       -v /usr/local/bin/docker:/usr/bin/docker
       registry.ori.adsdcsp.com/edge/cv-orchestrator:demo'
     volumes:
