--- a/pos/docker-stack.yml
+++ b/pos/docker-stack.yml
@@ -20,9 +20,10 @@ services:
       --dns=8.8.4.4 
       --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
       -v /var/log:/var/log 
-      -v /var/run/:/var/run/ 
+      -v /run:/run 
       -v /usr/local/bin/docker:/usr/bin/docker
-      registry.rsdecsapps.net/demo/x11:1.1.0'
+      -v /dev:/dev:shared
+      registry.rsdecsapps.net/demo/x11:1.2.1'
     volumes:
       - /var/run:/var/run
     deploy:
@@ -48,7 +49,7 @@ services:
       --dns=8.8.8.8 
       --dns=8.8.4.4  
       --privileged=true 
-      -v /var/run/:/var/run/ 
+      -v /run:/run 
       --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
       registry.rsdecsapps.net/demo/pos:0.0.1'
     volumes:
