--- a/win10/docker-compose.yml
+++ b/win10/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       --rm
       --env DISPLAY
       --env VNC=true
-      --env AUTOSTART="pos@remote-viewer -f spice+unix://var/run/pos.sock"
+      --env AUTOSTART="remote-viewer -f spice+unix://var/run/win10.sock"
       --privileged=true
       --net=host
       --dns=8.8.8.8 
@@ -33,10 +33,11 @@ services:
         constraints: 
           - node.platform.os == linux
           - engine.labels.graphics.i915 == true
-          # - engine.labels.serial_number == CZC7127XG8
-          # - node.labels.gpu.available == true
+          # - engine.labels.serial_number == DW1626551800174
 
-  pos:
+  # echo acd78537-d976-4919-b21b-73f83bfe1093 > /sys/devices/pci0000\:00/0000\:00\:02.0/mdev_supported_types/i915-GVTg_V5_4/create
+  # echo 1 > /sys/bus/pci/devices/$GVT_PCI/$GVT_GUID/remove
+  win7:
     image: docker:19.03.12
     entrypoint: [sh, -c]
     environment:
@@ -44,14 +45,21 @@ services:
     command: >-
       'exec docker run 
       --interactive
-      --name=pos 
+      --name win10
+      --rm
+      --privileged=true
       --net=host
       --dns=8.8.8.8 
-      --dns=8.8.4.4  
-      --privileged=true 
-      -v /run:/run 
+      --dns=8.8.4.4 
+      --env DISPLAY
+      --env VNC=true
+      --env RAM=4096 
+      --env VIDEO=spice 
+      --env SPICE_OPTIONS="gl=on,unix,addr=/var/run/win10.sock,disable-ticketing -vga qxl"
+      --env GPU=gvt
       --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
-      registry.rsdecsapps.net/demo/pos:0.0.1'
+      -v /run:/run 
+      registry.rsdecsapps.net/demo/win10:0.0.1'
     volumes:
       - /var/run:/var/run
     deploy:
@@ -62,4 +70,5 @@ services:
           - node.platform.os == linux
           - engine.labels.graphics.i915 == true
           - engine.labels.vt_enabled == true
-          # - engine.labels.serial_number == CZC7127XG8
+          # - engine.labels.serial_number == DW1626551800174
+          # - node.labels.gpu.available == true
