--- a/chrome/docker-compose.yml
+++ b/chrome/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       --net=host
       --dns=8.8.8.8 
       --dns=8.8.4.4
-      --env AUTOSTART="chrome@docker run -d --name chrome --rm --env DISPLAY --privileged=true --net=host --dns=8.8.8.8 --dns=8.8.4.4 -v /var/log:/var/log -v /var/run/udev:/var/run/udev:shared -v /dev:/dev registry.rsdecsapps.net/demo/chrome:0.0.1"
+      --env AUTOSTART="chrome@docker run -d --name chrome --rm --env DISPLAY --privileged=true --net=host --dns=8.8.8.8 --dns=8.8.4.4 -v /var/log:/var/log -v /var/run/udev:/var/run/udev:shared -v /dev:/dev:shared registry.rsdecsapps.net/demo/chrome:0.0.1 --no-sandbox --no-default-browser-check --no-crash-upload https://www.youtube.com/watch?v=NP9zZqqXJpo&list=PLk2sjg_-F-MftRXx0mAnAKURajwQsAeNr"
       --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
       -v /var/log:/var/log 
       -v /run:/run 
@@ -32,7 +32,6 @@ services:
         constraints: 
           - node.platform.os == linux
           - engine.labels.graphics.i915 == true
-          - engine.labels.serial_number == 8CC83219S9
           # - engine.labels.serial_number == 1905122097
           # - node.labels.gpu.available == true
           # - node.labels.usb.camera == true
