--- a/vmware/docker-compose.yml
+++ b/vmware/docker-compose.yml
@@ -7,23 +7,20 @@ services:
     environment:
       TASK_NAME: '{{.Task.Name}}'
     command: >-
-      'exec docker run 
-      --interactive
-      --name x11
+      'exec docker run -d
+      --name vmware
       --rm
-      --env DISPLAY
-      --env VNC=true
+      --env DISPLAY=':0'
       --privileged=true
       --net=host
       --dns=8.8.8.8 
       --dns=8.8.4.4
-      --env AUTOSTART="chrome@docker run -it --name vmware --rm --env DISPLAY --privileged=true --net=host --dns=8.8.8.8 --dns=8.8.4.4 -v /var/log:/var/log -v /var/run/udev:/var/run/udev:shared -v /dev:/dev:shared registry.rsdecsapps.net/demo/vmware-horizon:0.0.1 vmware-view"
-      --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
       -v /var/log:/var/log 
       -v /run:/run 
-      -v /usr/local/bin/docker:/usr/bin/docker
       -v /dev:/dev:shared
-      registry.rsdecsapps.net/demo/x11:1.2.1'
+      -v /tmp:/tmp
+      --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
+      registry.rsdecsapps.net/demo/vmware-horizon:0.0.1 vmware-view'
     volumes:
       - /var/run:/var/run
     deploy:
@@ -31,7 +28,7 @@ services:
       placement:
         constraints: 
           - node.platform.os == linux
-          - engine.labels.graphics.i915 == true
+          # - engine.labels.graphics.i915 == true
           # - engine.labels.serial_number == 1905122097
           # - node.labels.gpu.available == true
           # - node.labels.usb.camera == true
