--- a/vmware/docker-compose.yml
+++ b/vmware/docker-compose.yml
@@ -1,35 +1,21 @@
 version: "3.7"
 
 services:
-  x11:
-    image: docker:19.03.12
-    entrypoint: [sh, -c]
+  vmware:
+    image: registry.rsdecsapps.net/demo/vmware-horizon:0.0.1
+    command: ['vmware-view']
     environment:
-      TASK_NAME: '{{.Task.Name}}'
-    command: >-
-      'exec docker run
-      --interactive
-      --name vmware
-      --rm
-      --env DISPLAY=':0'
-      --privileged=true
-      --net=host
-      --dns=8.8.8.8 
-      --dns=8.8.4.4
-      -v /var/log:/var/log 
-      -v /run:/run 
-      -v /dev:/dev:shared
-      -v /tmp:/tmp
-      --label com.docker.stack.namespace=$$(docker container inspect --format "{{index .Config.Labels \"com.docker.stack.namespace\"}}" $${TASK_NAME})
-      registry.rsdecsapps.net/demo/vmware-horizon:0.0.1 vmware-view'
+      DISPLAY: ":0"
     volumes:
-      - /var/run:/var/run
+      - /run:/run
+      - /var/log:/var/log
+      - /dev:/dev:shared
+      - /tmp:/tmp
     deploy:
-      mode: global
+      mode: replicated
+      replicas: 1
       placement:
         constraints: 
           - node.platform.os == linux
           # - engine.labels.graphics.i915 == true
-          # - engine.labels.serial_number == 1905122097
-          # - node.labels.gpu.available == true
-          # - node.labels.usb.camera == true
+          # - engine.labels.serial_number == 8CC83219S9
