--- a/chrome/docker-compose.yml
+++ b/chrome/docker-compose.yml
@@ -17,5 +17,5 @@ services:
       placement:
         constraints: 
           - node.platform.os == linux
-          - engine.labels.graphics.i915 == true
+          # - engine.labels.graphics.i915 == true
           # - engine.labels.serial_number == 8CC83219S9
