--- a/dos/docker-compose.yml
+++ b/dos/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   dos:
     image: registry.rsdecsapps.net/demo/dos:0.0.5
     environment:
-      - NETWORK: "none"
-      - VIDEO: "custom"
-      - CUSTOM_VIDEO: "-display gtk -vga cirrus"
-      - DISPLAY: ":0"
-      - AUDIO: "none"
-      - ADD_FLAGS: "-soundhw sb16,adlib,pcspk -audiodev pa,id=sound0,server=unix:/tmp/pulse-sock -rtc base=localtime "
+      - NETWORK=none
+      - VIDEO=custom
+      - CUSTOM_VIDEO="-display gtk -vga cirrus"
+      - DISPLAY=":0"
+      - AUDIO=none
+      - ADD_FLAGS="-soundhw sb16,adlib,pcspk -audiodev pa,id=sound0,server=unix:/tmp/pulse-sock -rtc base=localtime "
     name: dos
     network_mode: host
     privileged: true
