--- a/dos/docker-compose.yml
+++ b/dos/docker-compose.yml
@@ -6,10 +6,10 @@ services:
     environment:
       - NETWORK=none
       - VIDEO=custom
-      - CUSTOM_VIDEO="-display gtk -vga cirrus"
+      - CUSTOM_VIDEO=-display\ gtk\ -vga\ cirrus
       - DISPLAY=":0"
       - AUDIO=none
-      - ADD_FLAGS="-soundhw sb16,adlib,pcspk -audiodev pa,id=sound0,server=unix:/tmp/pulse-sock -rtc base=localtime "
+      - ADD_FLAGS=-soundhw\ sb16,adlib,pcspk\ -audiodev\ pa,id=sound0,server=unix:/tmp/pulse-sock\ -rtc\ base=localtime
     network_mode: host
     privileged: true
     restart: always
