--- a/x11/docker-compose.yml
+++ b/x11/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - /var/log:/var/log 
       - /run/:/run/
       - /tmp/:/tmp/
+      - /lib/modules:/lib/modules
     logging:
       driver: "json-file"
       options:
